error fixed. add some extra designs

--- a/Assignment1-EnterpriseComputing/Assignment1-EnterpriseComputing.csproj
+++ b/Assignment1-EnterpriseComputing/Assignment1-EnterpriseComputing.csproj
@@ -76,6 +76,7 @@
     <Content Include="default.aspx" />
     <Content Include="GameCalculator.csproj" />
     <Content Include="Global.asax" />
+    <Content Include="Images\icon.ico" />
     <Content Include="main.css" />
     <Content Include="Web.config" />
   </ItemGroup>
