--- a/Assignment1-EnterpriseComputing/Assignment1-EnterpriseComputing.csproj
+++ b/Assignment1-EnterpriseComputing/Assignment1-EnterpriseComputing.csproj
@@ -67,6 +67,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="contact.aspx" />
+    <Content Include="contact.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -77,10 +79,19 @@
     <Content Include="GameCalculator.csproj" />
     <Content Include="Global.asax" />
     <Content Include="Images\icon.ico" />
+    <Content Include="JavaScript.js" />
+    <Content Include="mail\contact_me.php" />
     <Content Include="main.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="contact.aspx.cs">
+      <DependentUpon>contact.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="contact.aspx.designer.cs">
+      <DependentUpon>contact.aspx</DependentUpon>
+    </Compile>
     <Compile Include="default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
