--- a/Assignment1-EnterpriseComputing/Assignment1-EnterpriseComputing.csproj
+++ b/Assignment1-EnterpriseComputing/Assignment1-EnterpriseComputing.csproj
@@ -69,17 +69,20 @@
   <ItemGroup>
     <Content Include="contact.aspx" />
     <Content Include="contact.css" />
+    <Content Include="contact_me.js" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\styles.css" />
+    <Content Include="Css\agency.css" />
+    <Content Include="Css\bootstrap.css" />
+    <Content Include="Css\bootstrap.min.css" />
     <Content Include="default.aspx" />
     <Content Include="GameCalculator.csproj" />
     <Content Include="Global.asax" />
     <Content Include="Images\icon.ico" />
-    <Content Include="JavaScript.js" />
     <Content Include="mail\contact_me.php" />
     <Content Include="main.css" />
     <Content Include="Web.config" />
